/*
 * $Id: ChangeLog,v 1.2859 2004/05/01 04:00:37 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-02 12:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    + added buffered read when SET STRICTREAD is OFF and index is not
      subindex
    * the sort algorithm changed (QUICK SORT is nice but it depends
      data order and the cost could be random - current version has
      static cost and works faster then in optimistic
      situation quick sort - the trick is done using second memory
      buffer.
    * reduced maximum buffer size to 2MB - the tests shows it's quite
      enough.

  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/itemapi.c
    ! fixed bug with uninitialized item.asPointer.collect in
      HB_IT_POINTER item

2004-05-01 01:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * dll_b32.bat
     * if obj\dll dir dont exist, create first, Report by Bill Robertson

2004-04-30 21:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/xharbour.spec
    * reinabled GTALLEG - I don't know when and why it was disabled.

  * xharbour/contrib/libct/settime.c
    * commented out unused params to avoid warnings

  * xharbour/source/rtl/hbserv.c
    ! fixed param checking in HB_PUSHSIGNALHANDLER - it should be
      HB_IT_POINTER not HB_IT_LONG

  * xharbour/source/rtl/inkey.c
    * HB_SYMBOLUNUSED added to avoid warning

  * xharbour/source/vm/hvm.c
    * cleand hb_vmForTest() - it was possible that some variables
      were used uninitialized when <counter> was differ type then
      <end value> (LOGICAL<->NUMBER) instead of error reporting.

2004-04-30 11:55 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * include/getexit.ch